--- a/REST-Cliente.yml
+++ b/REST-Cliente.yml
@@ -13,5 +13,5 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
